# tr_b_causal_2020

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  CONTRIBUTORS.md  LICENSE  Makefile  README.md  environment.yml  pyproject.toml  requirements.in  requirements.txt  setup.py
.github/workflows/: project_workflow.yml
article/: README.md  compile_article.py  main.bib  main.tex
article/images/: create_graphics_ho.ipynb  create_graphics_ho.py  simple-graph  simple-graph-confounded
article/sections/: _0_abstract.tex  _1_intro_generic.tex  _2_graph_importance.tex  _3_graph_overview.tex  _4_graph_construction.tex  _5_graph_testing.tex  _6_graph_discovery.tex  _7_latent_confounding.tex  _8_conclusion.tex  _8_discussion.tex  _9_conclusion.tex
data/: README.md
data/processed/: W_inferred_PPCA.csv  Z_inferred_PPCA.csv
docs/: Makefile  conf.py  index.rst  make.bat
notebooks/: _01 - Problem Statement.md  _01-ProblemStatement.md  _02 - Project Rationale.ipynb  _02-ProjectRationale.md  _03 - Vision.md  _03-Vision.md  _04 - Users and Stakeholders.ipynb  _04-UsersandStakeholders.md  _05-Requirements.md  _06-Architecture.ipynb  _06-Architecture.md
notebooks/final/: 7.0-mab-selection-on-observables-final.ipynb  7.0-mab-selection-on-observables-final.md  7.0-mab-selection-on-observables-final.py  _04-tb-testing-your-causal-graph.ipynb  _04-tb-testing-your-causal-graph.md  _04-tb-testing-your-causal-graph.py  selection_on_observables_final.ipynb
notebooks/working/: 3.0-mab-independent-variable-simulation.ipynb  3.0-mab-independent-variable-simulation.md  4.0-mab-causal-graph-simulation.ipynb  4.0-mab-causal-graph-simulation.md  5.0-mab-simulation-causal-graph.ipynb  5.0-mab-simulation-causal-graph.md  6.0-mab-estimate-causal-effect.ipynb  6.0-mab-estimate-causal-effect.md  6.0-mab-estimate-causal-effect.py  Causal_Graph_Tim_Data.ipynb  Causal_Graph_Tim_Data.py  DA_interacting_graph  Simple_Simulation.ipynb  Simple_Simulation.md  Simple_Simulation.py  _01_tb-Demo-visual-conditional-independence-tests.ipynb  _01_tb-Demo-visual-conditional-independence-tests.py  _02_tb-Demo-visual-marginal-independence-tests.ipynb  _02_tb-Demo-visual-marginal-independence-tests.md  _02_tb-Demo-visual-marginal-independence-tests.py  _03-tb-deconfounder-predictive-checks.ipynb  _03-tb-deconfounder-predictive-checks.md  _03-tb-deconfounder-predictive-checks.py  _04-tb-parking-choice-example.ipynb  _04-tb-parking-choice-example.py  _05-tb-PC-algorithm-investigation.ipynb  _05-tb-PC-algorithm-investigation.py  external_notebook_skeleton.ipynb  factor_models.py  ho_deconfounder_on_sim_data.ipynb  ho_deconfounder_on_sim_data.py  investigating_deconfounder.ipynb  investigating_deconfounder.py  reproducing_deconfounder_results.ipynb  sim data.ipynb  sim data.md  sim data.py  util.py
references/: debugging_guide.md  environment_setup_guide.md
references/code/: _50_tb-cordon_toll_general_models--simplify_the_models.ipynb
references/lit_reviews/: falsification_guide.md
references/organization/: Project_story_outline.ipynb  Project_story_outline.md  _01-ProblemStatement.ipynb  _01-ProblemStatement.md  _02-ProjectRationale.md  _03-Vision.ipynb  _03-Vision.md  _05-Requirements.ipynb  _05-Requirements.md  _06-Project-Plan-and-Workflow.html  _06-Project-Plan-and-Workflow.ipynb  _06-Project-Plan-and-Workflow.md  _07-Architecture.ipynb
references/refactoring/: code_smells.md  ho_final_retro.md  refactoring_guide.md
references/retrospectives/: ho_retro.md  mb_retro.md  tb_retro.md
reports/figures/: conditional_independence_subgraph  deconfounder-causal-graph  discovery-example-graph  drive-alone-utility-graph  iclv-causal-graph  rum-causal-graph
src/: utils.py
src/causal2020/: 219.trivial  __init__.py  utils.py
src/graphs/: conditional_independence_example.py  deconfounder_example.py  drive_alone_utility.py  iclv.py  parking.py
src/models/: base_causal_model.py
src/observables/: availability.py  distfit.py  graphs.py  regression.py  simperturb.py  simulation.py  simworkflow.py  utils.py
src/testing/: conditional_independence.py  latent_independence.py  observable_independence.py
src/workflow/: cit_testing_images.py  (+5 more)
workflow/: store_deconfounder_graph.py  store_discovery_graph.py  store_drive_alone_utility_graph.py  store_iclv_graph.py  store_rum_graph.py  store_sob_graphs.py  testing_images_conditional.py  testing_images_latent.py  testing_images_marginal.py
(+24 files in other folders)
