[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "causal2020"
author = "Timothy Brathwaite"
author-email = "timothyb0912@gmail.com"
home-page = "https://github.com/hassan-obeid/tr_b_causal_2020"
requires = [
    "checkrs",
    "causalgraphicalmodels",
    "graphviz",
    "lxml",
    "matplotlib",
    "numpy",
    "pyprojroot",
    "scikit-learn",
    "scipy",
    "seaborn",
    "tensorflow==1.15.0",
    "tensorflow_probability==0.8.0",
    "torch<1.7.0",
    "tqdm",
]
requires-python=">=3.6"
description-file = "README.md"
keywords= "causal inference, causal discovery, testing, deconfounder"
classifiers=[
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Science/Research",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Environment :: Console",
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: BSD License",
]

[tool.black]
line-length = 79
py36 = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | notebooks

  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
)/
'''

[tool.bumpver]
current_version = "2021.1000.5"
version_pattern = "YYYY.BUILD.UU"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = false
push = false

[tool.bumpver.file_patterns]
"src/causal2020/__init__.py" = [
    '__version__ = "{version}"',
]


[tool.towncrier]
package = "causal2020"
package_dir = "src"
filename = "CHANGELOG.rst"
title_format = "{name} {version} ({project_date})"
wrap = true  # Wrap text to 79 characters
all_bullets = true  # make all fragments bullet points

  [[tool.towncrier.type]]
  directory = "added"
  name = "Added new features"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "changed"
  name = "Changed existing functionality"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "deprecated"
  name = "Marked for removal"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "removed"
  name = "Removed from package"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "fixed"
  name = "Bug fixes"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "security"
  name = "Patched vulnerabilities"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "doc"
  name = "Improved Documentation"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "trivial"
  name = "Trivial/Internal Changes"
  showcontent = true
